@@ -7,6 +7,7 @@ export(Check_input)
 export(DownSampling)
 export(EstPrior)
 export(EstPrior_rcpp)
+export(EstPrior_sprcpp)
 export(NOISY_FUN)
 export(Prior_fun)
 export(SyntheticControl)
