@@ -78,22 +78,39 @@ as_matrix <- function(mat){
 #' @export
 Check_input <- function(Data){
   
-  if(!is(Data, 'matrix')){
+  #use dgCMatrix
     if(is(Data, 'sparseMatrix')){
       if(!is(Data, 'dgCMatrix')){
-        Data <- as(as.matrix(Data), "dgCMatrix")
-        Data<-as_matrix(Data)
-      } else{
-        Data<-as_matrix(Data)
-      }
+        Data <- as(Data, "dgCMatrix")
+        #Data<-as_matrix(Data)
+      } 
     } else{
-      
-      if (!(methods::is(Data, "SummarizedExperiment")) &
-          !(methods::is(Data, "SingleCellExperiment"))) {
-        Data <- as.matrix(Data)
-      }
+        Data <- as(as.matrix(Data), "dgCMatrix")
     }
-  }
+  
+  
   return(Data)
 }
 
+
+#use matrix instead of dgCMatrix
+# Check_input <- function(Data){
+#   
+#   if(!is(Data, 'matrix')){
+#     if(is(Data, 'sparseMatrix')){
+#       if(!is(Data, 'dgCMatrix')){
+#         Data <- as(as.matrix(Data), "dgCMatrix")
+#         Data<-as_matrix(Data)
+#       } else{
+#         Data<-as_matrix(Data)
+#       }
+#     } else{
+#       
+#       if (!(methods::is(Data, "SummarizedExperiment")) &
+#           !(methods::is(Data, "SingleCellExperiment"))) {
+#         Data <- as.matrix(Data)
+#       }
+#     }
+#   }
+#   return(Data)
+# }
